update margin top for inputdt - still first file

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -236,6 +236,7 @@ body {
 			width: 100%;
 			text-transform: capitalize;
 			padding: 9px 30px 9px 12px;
+			margin-top: 6px;
 			font-style: normal;
 			font-weight: normal;
 			font-size: 14px;
